# openmm-xtb

./: CMakeLists.txt  README.md  build-install.sh  build_test_install.sh
.github/workflows/: CI.yml
openmmapi/include/: XtbForce.h
openmmapi/include/internal/: XtbForceImpl.h
openmmapi/src/: XtbForce.cpp  XtbForceImpl.cpp
python/: setup.py  xtbplugin.i
python/openmmxtb/: __init__.py
serialization/src/: XtbForceProxy.cpp
serialization/tests/: TestSerializeXtbForce.cpp
tests/: CMakeLists.txt  TestFullSystem.cpp
