#
# Testing
#

# Automatically create tests using files named "Test*.cpp"
FILE(GLOB TEST_PROGS "*Test*.cpp")

SET(PLUGINS_DIR ${OPENMM_ROOT}/lib/plugins)

include(FetchContent)
FetchContent_Declare(fmt
        GIT_REPOSITORY https://github.com/fmtlib/fmt.git
        GIT_TAG master
)
FetchContent_MakeAvailable(fmt)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/input/
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/input/)

FOREACH(TEST_PROG ${TEST_PROGS})
    GET_FILENAME_COMPONENT(TEST_ROOT ${TEST_PROG} NAME_WE)

    # Link with shared library

    ADD_EXECUTABLE(${TEST_ROOT} ${TEST_PROG})
    TARGET_LINK_LIBRARIES(${TEST_ROOT} PUBLIC ${SHARED_XTB_TARGET} fmt::fmt-header-only)
    SET_TARGET_PROPERTIES(${TEST_ROOT} PROPERTIES LINK_FLAGS "${EXTRA_COMPILE_FLAGS}" COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}")
    ADD_TEST(${TEST_ROOT} ${EXECUTABLE_OUTPUT_PATH}/${TEST_ROOT})
    TARGET_COMPILE_DEFINITIONS(${TEST_ROOT} PUBLIC PLUGINS_DIR="${PLUGINS_DIR}")
    SET_TESTS_PROPERTIES(${TEST_ROOT} PROPERTIES
            ENVIRONMENT "OMP_NUM_THREADS=1"
    )
    
ENDFOREACH(TEST_PROG ${TEST_PROGS})
